feat: Implement LiveKit STT agent using VAD and OpenAI, and add LiveKit API configuration.

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 # DeepL Settings (Required if provider is DEEPL)
 DEEPL_API_KEY=
 DEEPL_API_URL=https://api-free.deepl.com/v2/translate
+
+# LiveKit API Key
+LIVEKIT_API_KEY=
+LIVEKIT_API_SECRET=
+LIVEKIT_URL=
