--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 bcrypt = "^4.1.2"
 
 # External API Clients
+deepl = "^1.16.1"
 openai = "^1.10.0"
 httpx = "^0.26.0"
 aiohttp = "^3.9.1"
