--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ openai = "^1.10.0"
 httpx = "^0.26.0"
 aiohttp = "^3.9.1"
 livekit-api = "^0.6.0"
+livekit = "^0.13.1"
 
 # Utilities
 python-dotenv = "^1.0.0"
