feat: auto-join worker via redis events # 60

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,20 @@ OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 # DeepL Settings (Required if provider is DEEPL)
 DEEPL_API_KEY=
 DEEPL_API_URL=https://api-free.deepl.com/v2/translate
+
+# LiveKit
+LIVEKIT_URL=
+LIVEKIT_API_KEY=
+LIVEKIT_API_SECRET=
+
+# LiveKit Worker (Task 3)
+LIVEKIT_BACKEND_URL=http://api:8000
+LIVEKIT_ROOM_ID=
+LIVEKIT_SERVICE_AUTH=
+LIVEKIT_AUTO_SUBSCRIBE=true
+LIVEKIT_WORKER_ID=livekit_worker
+LIVEKIT_WORKER_TOKEN_TTL_SECONDS=0
+LIVEKIT_ROOM_EVENTS_CHANNEL=livekit:rooms
+
+# Worker token
+WORKER_SERVICE_KEY=
