--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,6 +172,33 @@ services:
     networks:
       - uritomo_network
 
+  # LiveKit Audio Sniffer Worker (Task 3)
+  livekit_sniffer:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: development
+    container_name: uritomo_livekit_sniffer
+    volumes:
+      - .:/app
+      - /app/.venv
+    environment:
+      BACKEND_URL: ${LIVEKIT_BACKEND_URL:-http://api:8000}
+      ROOM_ID: ${LIVEKIT_ROOM_ID:-}
+      SERVICE_AUTH: ${LIVEKIT_SERVICE_AUTH:-}
+      WORKER_SERVICE_KEY: ${WORKER_SERVICE_KEY:-}
+      WORKER_ID: ${LIVEKIT_WORKER_ID:-livekit_worker}
+      WORKER_TOKEN_TTL_SECONDS: ${LIVEKIT_WORKER_TOKEN_TTL_SECONDS:-0}
+      AUTO_SUBSCRIBE: ${LIVEKIT_AUTO_SUBSCRIBE:-true}
+      REDIS_URL: ${REDIS_URL:-redis://redis:6379/0}
+      LIVEKIT_ROOM_EVENTS_CHANNEL: ${LIVEKIT_ROOM_EVENTS_CHANNEL:-livekit:rooms}
+    depends_on:
+      api:
+        condition: service_started
+    command: python workers/audio_sniffer.py
+    networks:
+      - uritomo_network
+
 networks:
   uritomo_network:
     driver: bridge
