--- a/.env.example
+++ b/.env.example
@@ -55,9 +55,14 @@ LIVEKIT_BACKEND_URL=http://api:8000
 LIVEKIT_ROOM_ID=
 LIVEKIT_SERVICE_AUTH=
 LIVEKIT_AUTO_SUBSCRIBE=true
+LIVEKIT_FORCE_RELAY=false
 LIVEKIT_WORKER_ID=livekit_worker
 LIVEKIT_WORKER_TOKEN_TTL_SECONDS=0
 LIVEKIT_ROOM_EVENTS_CHANNEL=livekit:rooms
+LIVEKIT_KO_TRACK=lk.out.ko
+LIVEKIT_JA_TRACK=lk.out.ja
+LIVEKIT_KO_HZ=320.0
+LIVEKIT_JA_HZ=880.0
 
 # Worker token
 WORKER_SERVICE_KEY=
