--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ aiosqlite = "^0.19.0"
 openai = "^1.10.0"
 httpx = "^0.26.0"
 aiohttp = "^3.9.1"
+google-auth = "^2.27.0"
 
 # Utilities
 python-dotenv = "^1.0.0"
