--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,24 +43,22 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 bcrypt = "^4.1.2"
 
 # External API Clients
+deepl = "^1.16.1"
 openai = "^1.10.0"
 httpx = "^0.26.0"
 aiohttp = "^3.9.1"
+livekit-api = "^1.1.0"
+livekit = "^1.0.23"
 
 # Utilities
 python-dotenv = "^1.0.0"
 tenacity = "^8.2.3"
 pytz = "^2024.1"
+streamlit = "^1.32.0"
 
 # Logging & Monitoring
 structlog = "^24.1.0"
 python-json-logger = "^2.0.7"
-# Machine Learning & VAD
-torch = "^2.2.0"
-torchaudio = "^2.2.0"
-numpy = "^1.26.0"
-livekit-server-sdk = "^0.6.0"
-
 sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
 
 [tool.poetry.group.dev.dependencies]
