feat: Add OpenAI configuration options to docker-compose for enhanced functionality #73

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -237,6 +237,13 @@ services:
       OPENAI_REALTIME_VAD_THRESHOLD: ${OPENAI_REALTIME_VAD_THRESHOLD:-0.5}
       OPENAI_REALTIME_VAD_PREFIX_MS: ${OPENAI_REALTIME_VAD_PREFIX_MS:-300}
       OPENAI_REALTIME_VAD_SILENCE_MS: ${OPENAI_REALTIME_VAD_SILENCE_MS:-500}
+      OPENAI_ALWAYS_RESPOND: ${OPENAI_ALWAYS_RESPOND:-false}
+      OPENAI_TRIGGER_PHRASES: ${OPENAI_TRIGGER_PHRASES:-}
+      OPENAI_TRIGGER_PHRASES_KO: ${OPENAI_TRIGGER_PHRASES_KO:-}
+      OPENAI_TRIGGER_PHRASES_JA: ${OPENAI_TRIGGER_PHRASES_JA:-}
+      OPENAI_TRIGGER_DEBUG: ${OPENAI_TRIGGER_DEBUG:-false}
+      OPENAI_HISTORY_MAX_TURNS: ${OPENAI_HISTORY_MAX_TURNS:-0}
+      OPENAI_STT_SAVE: ${OPENAI_STT_SAVE:-true}
       OPENAI_WAKE_PHRASES: ${OPENAI_WAKE_PHRASES:-하이 에이전트,하이에이전트,ハイエージェント}
       OPENAI_WAKE_COOLDOWN_SECONDS: ${OPENAI_WAKE_COOLDOWN_SECONDS:-2.0}
     depends_on:
