feat: update server host to allow external access and enhance Google login user handling

--- a/alembic.ini
+++ b/alembic.ini
@@ -36,7 +36,8 @@ prepend_sys_path = .
 # The strict_dirname indication suggests that the user
 # must not specify a version path if the version_locations
 # has only a single directory.
-version_locations = %(here)s/migrations/versions
+# NOTE: use a relative path to avoid issues with spaces in absolute paths.
+version_locations = migrations/versions
 
 # the output encoding used when revision files
 # are written from script.py.mako
