feat: Enhance Realtime Agent with session ID handling and AI response saving #73

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,12 +228,14 @@ services:
       LIVEKIT_KO_TRACK: ${LIVEKIT_KO_TRACK:-lk.out.ko}
       LIVEKIT_JA_TRACK: ${LIVEKIT_JA_TRACK:-lk.out.ja}
       LIVEKIT_UNKNOWN_LANG_POLICY: ${LIVEKIT_UNKNOWN_LANG_POLICY:-both}
+      DATABASE_URL: ${DATABASE_URL:-mysql+aiomysql://${MYSQL_USER:-uritomo_user}:${MYSQL_PASSWORD:-uritomo_pass}@mysql:3306/${MYSQL_DATABASE:-uritomo}}
       TOKEN_FETCH_MAX_ATTEMPTS: ${TOKEN_FETCH_MAX_ATTEMPTS:-2}
       TOKEN_FETCH_RETRY_SECONDS: ${TOKEN_FETCH_RETRY_SECONDS:-2}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       OPENAI_REALTIME_MODEL: ${OPENAI_REALTIME_MODEL:-gpt-realtime}
       OPENAI_REALTIME_URL: ${OPENAI_REALTIME_URL:-wss://api.openai.com/v1/realtime}
       OPENAI_REALTIME_TRANSCRIBE_MODEL: ${OPENAI_REALTIME_TRANSCRIBE_MODEL:-gpt-4o-mini-transcribe}
+      OPENAI_REALTIME_ALLOW_BOTH_MODALITIES: ${OPENAI_REALTIME_ALLOW_BOTH_MODALITIES:-false}
       OPENAI_REALTIME_VAD_THRESHOLD: ${OPENAI_REALTIME_VAD_THRESHOLD:-0.5}
       OPENAI_REALTIME_VAD_PREFIX_MS: ${OPENAI_REALTIME_VAD_PREFIX_MS:-300}
       OPENAI_REALTIME_VAD_SILENCE_MS: ${OPENAI_REALTIME_VAD_SILENCE_MS:-500}
