feat: add summary_max_chars parameter for history summary in RealtimeSession #73

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -245,6 +245,7 @@ services:
       OPENAI_TRIGGER_PHRASES_JA: ${OPENAI_TRIGGER_PHRASES_JA:-}
       OPENAI_TRIGGER_DEBUG: ${OPENAI_TRIGGER_DEBUG:-false}
       OPENAI_HISTORY_MAX_TURNS: ${OPENAI_HISTORY_MAX_TURNS:-0}
+      OPENAI_HISTORY_SUMMARY_MAX_CHARS: ${OPENAI_HISTORY_SUMMARY_MAX_CHARS:-800}
       OPENAI_STT_SAVE: ${OPENAI_STT_SAVE:-true}
       OPENAI_WAKE_PHRASES: ${OPENAI_WAKE_PHRASES:-하이 에이전트,하이에이전트,ハイエージェント}
       OPENAI_WAKE_COOLDOWN_SECONDS: ${OPENAI_WAKE_COOLDOWN_SECONDS:-2.0}
