feat: add environment variable logging for WebSocket and audio processing #95

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,8 @@ services:
       ENV: ${ENV:-development}
       DEBUG: ${DEBUG:-true}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      WS_BROADCAST_LOG: ${WS_BROADCAST_LOG:-true}
+      WS_BROADCAST_LOG_PAYLOAD: ${WS_BROADCAST_LOG_PAYLOAD:-true}
       
       # Security
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-your-secret-key-change-in-production}
@@ -237,6 +239,9 @@ services:
       OPENAI_REALTIME_URL: ${OPENAI_REALTIME_URL:-wss://api.openai.com/v1/realtime}
       OPENAI_REALTIME_TRANSCRIBE_MODEL: ${OPENAI_REALTIME_TRANSCRIBE_MODEL:-gpt-4o-mini-transcribe}
       OPENAI_REALTIME_ALLOW_BOTH_MODALITIES: ${OPENAI_REALTIME_ALLOW_BOTH_MODALITIES:-false}
+      OPENAI_REALTIME_LOG_VAD: ${OPENAI_REALTIME_LOG_VAD:-true}
+      OPENAI_REALTIME_LOG_STT_DELTA: ${OPENAI_REALTIME_LOG_STT_DELTA:-true}
+      OPENAI_REALTIME_LOG_STT_SEGMENT: ${OPENAI_REALTIME_LOG_STT_SEGMENT:-true}
       OPENAI_REALTIME_VAD_THRESHOLD: ${OPENAI_REALTIME_VAD_THRESHOLD:-0.5}
       OPENAI_REALTIME_VAD_PREFIX_MS: ${OPENAI_REALTIME_VAD_PREFIX_MS:-300}
       OPENAI_REALTIME_VAD_SILENCE_MS: ${OPENAI_REALTIME_VAD_SILENCE_MS:-500}
@@ -248,6 +253,7 @@ services:
       OPENAI_HISTORY_MAX_TURNS: ${OPENAI_HISTORY_MAX_TURNS:-0}
       OPENAI_HISTORY_SUMMARY_MAX_CHARS: ${OPENAI_HISTORY_SUMMARY_MAX_CHARS:-800}
       OPENAI_STT_SAVE: ${OPENAI_STT_SAVE:-true}
+      LIVEKIT_LOG_AUDIO: ${LIVEKIT_LOG_AUDIO:-true}
       OPENAI_WAKE_COOLDOWN_SECONDS: ${OPENAI_WAKE_COOLDOWN_SECONDS:-2.0}
     depends_on:
       api:
