--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ python = "^3.11"
 # FastAPI & Server
 fastapi = "^0.109.0"
 uvicorn = {extras = ["standard"], version = "^0.27.0"}
-python-multipart = "^0.0.6"
 websockets = "^12.0"
 
 # Database
@@ -23,14 +22,9 @@ cryptography = "^42.0.0"
 
 # Redis & Queue
 redis = "^5.0.1"
-rq = "^1.16.1"
-hiredis = "^2.3.2"
 
 # Vector Database
 qdrant-client = "^1.7.0"
-
-# Object Storage (Optional)
-minio = "^7.2.3"
 
 # Pydantic & Validation
 pydantic = "^2.5.3"
@@ -46,20 +40,16 @@ bcrypt = "^4.1.2"
 deepl = "^1.16.1"
 openai = "^1.10.0"
 httpx = "^0.26.0"
-aiohttp = "^3.9.1"
 livekit-api = "^1.1.0"
 livekit = "^1.0.23"
 
 # Utilities
 python-dotenv = "^1.0.0"
-tenacity = "^8.2.3"
-pytz = "^2024.1"
 streamlit = "^1.32.0"
 
-# Logging & Monitoring
+# Logging
 structlog = "^24.1.0"
 python-json-logger = "^2.0.7"
-sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
 
 [tool.poetry.group.dev.dependencies]
 # Testing
@@ -79,7 +69,6 @@ pre-commit = "^3.6.0"
 
 # Types
 types-redis = "^4.6.0.20240106"
-types-pytz = "^2024.1.0.20240203"
 
 [build-system]
 requires = ["poetry-core"]
